feat: Update Gemini API and UX for Al Fiqh Assistant
Updates the `@google/genai` dependency to version `1.34.0` to leverage the latest features and improvements.

Enhances the user experience by refining the Gemini API system instructions for more accurate and clearly stated fatwa retrieval. Also, introduces subtle UI improvements, including a new `parchment-bg` class for visual appeal and ensures proper handling of initial chat states and error messages. The `vercel.json` configuration has been updated for Vercel deployment.

Additionally, Vite build optimizations are introduced with manual chunking for improved performance.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
         .animate-in { animation: fadeIn 0.4s ease-out forwards; }
+        .parchment-bg { background: linear-gradient(to bottom right, #ffffff, #fdfbf7); }
     </style>
 <script type="importmap">
 {
